--- a/client/src/Dashboard.css
+++ b/client/src/Dashboard.css
@@ -1,4 +1,4 @@
-.wrapper {
+.banner-wrapper {
   width: 100%;
   height: 100%;
 }
@@ -7,4 +7,8 @@ p {
   padding-left: 1.5em;
   padding-top: 1.5em;
   font-size: 1.5em;
+}
+
+.dashboard-buttons {
+  padding-left: 2.2em;
 }
